--- a/views/post.html
+++ b/views/post.html
@@ -27,12 +27,13 @@
 
     <div class="container">
         <section>
-            <h2>EnterGolang Posts</h2>
-            <div>
-                <h2>{{ .Title }} {{ .Date }}</h2>
-                <p>{{ .Body }}</p>
+            <h2>{{ .Date }}</h2>
+            <div class="terminal-timeline">
+                <div class="terminal-card">
+                    <h2>{{ .Title }} {{ .Date }}</h2>
+                    <p>{{ .Body }}</p>
+                </div>
             </div>
-            <a href="/">Home</a>
         </section>
     </div>
 </body>
