--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,9 @@
-.card {
-    background-color: red;
+.flex-card {
+    display: flex;
+    align-items: center;
+    flex-flow: row-reverse;
+}
+
+h1 {
+    padding: 10px;
 }
