add error template, refactor url match and read dir

--- a/views/error.html
+++ b/views/error.html
@@ -32,15 +32,13 @@
                 <h2 id="Timeline">Entergolang Blog</h2>
             </header>
             <div class="terminal-timeline">
-            {{ range . }}
                 <div class="terminal-card">
-                    <h1>{{ .FrontMatter.Title }}</h1>
-                    <div><p>{{ .FrontMatter.Date }} ...</p></div>
+                    <h1>Not Found</h1>
+                    <div><p>Mau kemana sih ? ...</p></div>
                     <div class="flex-card">
-                        <a class="btn btn-default btn-ghost" href="{{ .File }}">More</a>
+                        <a class="btn btn-default btn-ghost" href="/">Home</a>
                     </div>
                 </div>
-            {{ end }}
             </div>
         </section>
     </div>
