--- a/views/post.html
+++ b/views/post.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="data:;base64,=">
+    <link href="/static/favicon.ico" rel="icon" type="image/x-icon" />
     <link rel="stylesheet" href="https://unpkg.com/terminal.css@0.7.1/dist/terminal.min.css" />
     <link rel="stylesheet" href="/static/styles.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/highlight.min.js"></script>
@@ -21,9 +21,9 @@
             </header>
             <nav class="terminal-menu">
                 <ul>
-                    <li class="menu-item">Home</li>
-                    <li class="menu-item">About</li>
-                    <li class="menu-item">Github</li>
+                    <li class="menu-item"><a href="/">Home</a></li>
+                    <li class="menu-item"><a href="https://twitter.com/satriyop">Author</a></li>
+                    <li class="menu-item"><a href="https://github.com/satriyop/entergolang">Github</a></li>
                 </ul>
             </nav>
         </div>
