--- a/views/index.html
+++ b/views/index.html
@@ -35,7 +35,7 @@
             {{ range . }}
                 <div class="terminal-card">
                     <h1>{{ .FrontMatter.Title }}</h1>
-                    <div><p>{{ .FrontMatter.Date }} ...</p></div>
+                    <div><p>{{ .Body }} ...</p></div>
                     <div class="flex-card">
                         <a class="btn btn-default btn-ghost" href="{{ .File }}">More</a>
                     </div>
